--- a/frontend/css/painel.css
+++ b/frontend/css/painel.css
@@ -9,27 +9,66 @@
     display: flex;
     flex-direction: row;
 }
-
-.painel-menu{
-    width: 20%;
-    height: 100%;
-    background-color: rgb(46, 33, 33);
+.painel-home-top{
+    background-color: var(bgcolor-main);
+    width: 100%;
+    height: 10%;
 }
 
 .painel-home{
-    width: 80%;
+    width: 100%;
     height: 100%;
     background-color:var(bgcolor-main);
 }
 
 
-.painel-home-top{
-    background-color: var(bgcolor-main);
-    width: 100%;
-    height: 10%;
-    box-shadow: 0px 0px 5px rgb(117, 117, 117);
+.painel-menu{
+    display: flexbox;
+    flex-direction: column;
+    
+    width: 8%;
+    height: 100%;
+    background-color: rgb(46, 33, 33);
+    transition: 1s;
 }
 
-.painel-home-top-nomeescola{
-    color: rgb(55, 77, 77);
+.painel-menu-logo{
+
 }
+
+.painel-menu-item{
+    border-radius: 100px 0px 0px 100px;
+    min-width: 50%;
+    height: 45px;
+    margin-top: 10px;
+    list-style: none;
+    background-color: aliceblue;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    transition: 1s;
+    cursor: pointer;
+}
+
+.painel-menu-item:hover{
+    background-color: rgb(181, 188, 188);
+}
+
+.painel-menu-item:hover{
+    background-color: rgb(181, 188, 188);
+}
+
+.painel-menu-item-icon{
+    margin: 10%;
+}
+
+.painel-menu-item-text{
+    width: 0;
+    height: 0;
+    visibility: hidden;
+}
+
+
+
+
