--- a/frontend/css/painel.css
+++ b/frontend/css/painel.css
@@ -1,74 +1,148 @@
-:root{
-    bgcolor-main: rgb(255, 255, 255);
-    fontcolor-main: (117, 117, 117);
-    bgcolor-secondary: rgb(46, 33, 33);
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  color: black;
 }
 
-.painel-all{
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-}
-.painel-home-top{
-    background-color: var(bgcolor-main);
-    width: 100%;
-    height: 10%;
+body {
+  font-family: 'Montserrat', sans-serif;
+  height: 100vh;
+  width: 100vw;
 }
 
-.painel-home{
-    width: 100%;
-    height: 100%;
-    background-color:var(bgcolor-main);
+header {
+  background-color: #fdf2f2;
+  display: flex;
+  height: 10%;
+  transition: 0.8s;
+  box-shadow: 1px 1px 5px 0.2px #a7a1a1;
+  align-items: center;
+  transition: width 2s linear 1s;
 }
 
-
-.painel-menu{
-    display: flexbox;
-    flex-direction: column;
-    
-    width: 8%;
-    height: 100%;
-    background-color: rgb(46, 33, 33);
-    transition: 1s;
+.turma-Top {
+  position: relative;
+  right: 61%;
+  transition: 0.8s;
+  top: 3px;
+  display: flex;
+  align-items: center;
+  font-size: large;
 }
 
-.painel-menu-logo{
-
+#pesquisar-conjunto {
+  position: relative;
+  right: 5%;
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.painel-menu-item{
-    border-radius: 100px 0px 0px 100px;
-    min-width: 50%;
-    height: 45px;
-    margin-top: 10px;
-    list-style: none;
-    background-color: aliceblue;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    transition: 1s;
-    cursor: pointer;
+#pesquisa {
+  padding: 2%;
+  font-size: 90%;
+  border: 0.6px solid #cec6c6;
 }
 
-.painel-menu-item:hover{
-    background-color: rgb(181, 188, 188);
+#pesquisa:hover{
+  background-color: #f9f9f9;
+  border: 0.9px solid #c3c2c2;
 }
 
-.painel-menu-item:hover{
-    background-color: rgb(181, 188, 188);
+#pesquisa-botao {
+  width: auto;
+  font-size: 5px;
+  cursor: pointer;
+  padding: 1%;
+  border: none;
+  background-color: #fdf2f2;
 }
 
-.painel-menu-item-icon{
-    margin: 10%;
-}
+#pesquisa-botao:active{
+  border: 1px solid saddlebrown;
 
-.painel-menu-item-text{
-    width: 0;
-    height: 0;
-    visibility: hidden;
 }
 
 
+#sidebar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background-color: #1f1c2b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* Important */
+  z-index: 999;
+  width: 0px;
+  overflow: hidden;
+  transition: width 0.8s;
+}
 
+#close {
+  font-size: 20px;
+  color: #fff;
+  position: absolute;
+  left: 200px;
+  top: 20px;
+  cursor: pointer;
+}
+
+#menu {
+  font-size: 20px;
+  color: #1f1c2b;
+  position: absolute;
+  left: 20px;
+  top: 20px;
+  cursor: pointer;
+}
+
+.logo-menu {
+  position: relative;
+  bottom: 30%;
+  right: 5%;
+}
+
+ul {
+  position: relative;
+  bottom: 100%;
+  list-style: none;
+  width: 100%;
+  right: 8%;
+
+}
+
+li {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 30px;
+  cursor: pointer;
+}
+
+li:hover {
+  border-bottom: 0.5px #fdf2f2 solid;
+}
+
+/* PAINEL */
+
+.main {
+  padding-top: 5%;
+  width: auto;
+  transition: 0.8s;
+  top: 10%;
+}
+
+
+tbody :hover{
+  background: rgb(234, 228, 228);
+  cursor: pointer;
+}
 
