--- a/frontend/css/painel.css
+++ b/frontend/css/painel.css
@@ -14,8 +14,13 @@
   font-weight: bold;
 }
 
+*{
+  box-shadow: 0px 2px 1px 1px gray;
+}
+
 body {
   height: 100vh;
+
   width: 100vw;
   background-color: var(--cor-secundaria);
 }
@@ -40,6 +45,7 @@ body {
   font-size: 20px;
   color: #fff;
   cursor: pointer;
+  
 }
 
 .logo-menu {
@@ -88,9 +94,9 @@ li:hover {
   cursor: pointer;
 }
 
-header {
+.header {
   background-color: var(--cor-primaria);
-  width: 100%;
+
   height: 10%;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -101,6 +107,7 @@ header {
   align-items: center;
   width: 100%;
 }
+
 
 .icons-menu {
   width: 18px;
@@ -140,6 +147,7 @@ header {
   border-radius: 5px 0 0 5px;
   outline: none;
   color: #9DBFAF;
+  
 }
 
 .pesquisa-campo:focus{
@@ -156,6 +164,20 @@ header {
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
+}
+
+.tools-painel{
+  background-color: #d0d9e0;
+  min-height: 40px;
+  max-height: 80px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  
+}
+
+.alunos-qtd .alunos-cadastrar{
+
 }
 
 main {
