--- a/frontend/css/painel.css
+++ b/frontend/css/painel.css
@@ -14,13 +14,9 @@
   font-weight: bold;
 }
 
-*{
-  box-shadow: 0px 2px 1px 1px gray;
-}
 
 body {
   height: 100vh;
-
   width: 100vw;
   background-color: var(--cor-secundaria);
 }
@@ -63,12 +59,11 @@ body {
 }
 
 #menu {
-  font-size: 20px;
-  position: absolute;
+  position: relative;
   left: 20px;
-  top: 20px;
   cursor: pointer;
-  color: white;
+  border: none;
+  height: 20px;
 }
 
 ul {
