--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -1,37 +1,76 @@
 @import "/css/cores.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-*{
+
+* {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
 
-body, html{
+body,
+html {
     width: 100%;
     height: 100%;
 }
 
-header{
+header {
     width: 100%;
     background-color: var(--cor-primaria);
     height: 15%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.nav-infos {
     display: flex;
-
-    box-shadow: 1px 1px 5px 0.2px #a7a1a1;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    position: relative;
+    right: 100px;
 }
 
-.logo{
-    margin: 25px;
+.nav-infos * {
+    margin-inline: 10px;
+    color: var(--cor-secundaria);
+    list-style: none;
+    text-decoration: none;
 }
 
-main{
 
+.nav-infos-unidade::after {
+    display: block;
+}
 
+.nav-infos-unidade:hover::after {
+    transform: scaleX(1);
+}
+
+.logo {
+    width: 30%;
+    height: 100%;
+    position: relative;
+    left: 10%;
+    cursor: pointer;
+}
+
+main {
+    background-color: black;
+    min-height: 50%;
+    height: auto;
+}
+
+footer {
+    background-color: brown;
+    height: 150px;
 }
 
 /*SLIDES*/
 
-.hero{
-        box-sizing: border-box;
+.hero {
     width: 100%;
     height: 400px;
 }
@@ -42,9 +81,9 @@ main{
     position: absolute;
 }
 
-.slide-buttons-individual{
+.slide-buttons-individual {
     position: relative;
-    cursor:pointer;
+    cursor: pointer;
     margin-inline: 46%;
     padding: 5px;
     color: var(--cor-secundaria);
@@ -53,16 +92,14 @@ main{
     align-items: center;
     flex-direction: row;
     /*PARA NAO SELECIONAR O BOTAO*/
-
-    user-select: none;            /* Possível implementação no futuro */
+    user-select: none;
 }
 
-.slide-buttons{
+.slide-buttons {
     height: inherit;
 }
 
-.slides{
+.slides {
     width: 100%;
     height: 400px;
 }
-
