--- a/frontend/css/painel.css
+++ b/frontend/css/painel.css
@@ -165,18 +165,18 @@ li:hover {
   background-color: #d0d9e0;
   min-height: 40px;
   max-height: 80px;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   
 }
 
-.alunos-qtd .alunos-cadastrar{
-
-}
 
 main {
   background-color: var(--cor-secundaria);
   width: 100%;
   height: 90%;
+  display: flex;
 }
+
