--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -1,34 +1,84 @@
+/* PADRAO TODA PAG*/
+
+@import "/css/cores.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+
 * {
-    padding: 0;
     margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15px;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
 
 body,
 html {
     width: 100%;
     height: 100%;
-    color: rgb(0, 0, 0);
 }
 
 header {
-    background-color: #3b7978;
-    font-size: 55px;
-    height: 10%;
     width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #fdf2f2;
-    transition: 0.8s;
-    box-shadow: 1px 1px 5px 0.2px #a7a1a1;
+    background-color: var(--cor-primaria);
+    height: 15%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
-.logo-header{
-    margin-left: 10%;
+
+
+.nav-infos {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    right: 100px;
 }
+
+.nav-infos-unidade{
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.a {
+    list-style: none;
+    text-decoration: none;
+    padding-inline: 3px;
+}
+
+.border-bottom-animation {
+    display: inline-block;
+    color: var(--cor-secundaria);
+    text-decoration: none;
+}
+
+.border-bottom-animation::after {
+    position: relative;
+    top: 4px;
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background: var(--cor-secundaria);
+    transition: width 1s;
+}
+
+.border-bottom-animation:hover::after {
+    width: 100%;
+    transition: width 1s;
+}
+
+
+.logo {
+    width: 30%;
+    height: 100%;
+    position: relative;
+    left: 10%;
+    cursor: pointer;
+}
+
+/* ------------------ */
 
 .forget{
     text-decoration: none;
@@ -102,10 +152,8 @@ main {
 
 .apresentation-login {
     background: rgb(255, 255, 255);
-    display: flex;
     width: 100%;
     margin-top: 8px;
-    justify-content: center;
-    align-items: center;
-    padding-right: 10%;
+    overflow: hidden;
+    object-fit: cover;
 }
