--- a/frontend/css/painel.css
+++ b/frontend/css/painel.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
-:root {
-  --cor-primaria: #1b4d76;
-  --cor-secundaria: #e8f1f2;
-}
+@import "/css/cores.css";
 
 * {
   margin: 0;
@@ -13,7 +9,6 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
 }
-
 
 body {
   height: 100vh;
@@ -41,7 +36,6 @@ body {
   font-size: 20px;
   color: #fff;
   cursor: pointer;
-  
 }
 
 .logo-menu {
@@ -91,7 +85,6 @@ li:hover {
 
 .header {
   background-color: var(--cor-primaria);
-
   height: 10%;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -113,7 +106,7 @@ li:hover {
   position: relative;
   left: 12%;
   color: #e8f1f2;
-  transition: 0.8s;
+  transition: left 0.8s;
 }
 
 .container-pesquisa {
