--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -11,15 +11,26 @@
 
 body,
 html {
+    scroll-behavior: smooth;
     width: 100%;
     height: 100%;
 }
 
 .header-logo {
-    z-index: 999;
+    z-index: 998;
     position: absolute;
     width: 100%;
     background-color: none;
+    height: 15%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.header-logo-fixed {
+    z-index: 998;
+    position: fixed;
+    width: 100%;
+    background-color: var(--cor-primaria);
     height: 15%;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -33,12 +44,13 @@ html {
     align-items: center;
     width: 100%;
     position: relative;
-    right: 100px;
+    right: 15%;
 }
 
 .nav-infos-unidade {
+    position: relative;
     display: inline-block;
-    margin-right: 20px;
+    margin-inline-start: 50px;
 }
 
 .a {
@@ -96,7 +108,7 @@ footer {
     height: 629px;
     display: flex;
     align-items: center;
-    border-bottom: 0.1px solid black;
+    box-shadow: 1px 1px 8px 1px;
 }
 
 .hero-image {
@@ -126,7 +138,6 @@ footer {
     background-color: rgb(238, 235, 235);
 }
 
-
 /* CARD */
 
 .propostas {
@@ -140,7 +151,6 @@ footer {
 .proposta-card {
     width: 100%;
     list-style: none;
-
     height: 200px;
     display: grid;
     justify-content: center;
@@ -170,17 +180,20 @@ footer {
     font-weight: bold;
 }
 
-
 .proposta-card:nth-child(odd) {
-    background-color: #5c656f;
+    background-color: var(--cor-primaria);
+    box-shadow: 1px 1px 2px 1px black;
     color: rgb(255, 255, 255);
+    text-shadow: 1px 1px 4px black;
     transition: background 0.5s;
 }
 
 .proposta-card:nth-child(even) {
     box-shadow: 1px 1px 2px 1px black;
     color: #000000;
+    text-shadow: 0.3px 0.3px 0.001px black;
     transition: background 0.5s;
+
 }
 
 .proposta-card:nth-child(even):hover {
@@ -192,10 +205,76 @@ footer {
     background-color: #364251;
 }
 
-.title-propostas {
+.container-title-article {
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
-    height: 60px;
+}
+
+.title-article {
+    position: relative;
+    display: inline-block;
+    font-size: 1.6rem;
+    margin: 8px;
+    margin-top: 50px;
+    color: var(--cor-primaria);
+}
+
+.title-article::before,
+.title-article::after {
+    content: "";
+    position: absolute;
+    top: 0.65em;
+    width: 1em;
+    height: 0.05em;
+    background-color: var(--cor-primaria);
+    left: -1.25em;
+}
+
+.title-article::after {
+    left: initial;
+    right: -1.25em;
+}
+
+.upbutton {
+    color: white;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 5%;
+    z-index: 999;
+}
+
+/* DADOS */
+
+@media (max-width: 600px) {
+    * {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
+    
+    html, body{
+        width: 100vw;
+        height: 100vh;
+    }
+
+    header {
+        width: 100%;
+    }
+
+    .header-logo {
+        position: fixed;
+        top: 0;
+        background: #000;
+    }
+
+    .hero{
+        width: 100%;
+    }
+    .hero-image{
+        object-fit: cover;
+
+    }
 }
