--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -1,6 +1,11 @@
 @import "/css/cores.css";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
+/*IGNORADOS*/
+.smarthphone{
+    display: none;
+}
+
 
 * {
     margin: 0;
@@ -11,7 +16,6 @@
 
 body,
 html {
-    scroll-behavior: smooth;
     width: 100%;
     height: 100%;
 }
@@ -24,16 +28,8 @@ html {
     height: 15%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-}
-
-.header-logo-fixed {
-    z-index: 998;
-    position: fixed;
-    width: 100%;
-    background-color: var(--cor-primaria);
-    height: 15%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    box-shadow: 0px 0px 5px 0.1px rgb(82, 78, 78);
+    transition: position 1s;
 }
 
 /* NAV ANIMADO */
@@ -96,16 +92,11 @@ section {
     height: auto;
 }
 
-footer {
-    background-color: brown;
-    height: 150px;
-}
-
-/*SLIDES*/
+/*HERO*/
 
 .hero {
     width: 100%;
-    height: 629px;
+    height: 100%;
     display: flex;
     align-items: center;
     box-shadow: 1px 1px 8px 1px;
@@ -122,24 +113,37 @@ footer {
     z-index: 2;
     color: var(--cor-secundaria);
     width: 40%;
+    font-size: 0.9rem;
 }
 
 .hero-text-button {
     margin-top: 20px;
     padding: 10px;
-    width: 100px;
+    object-fit: cover;
     border: 0.5px solid white;
     background-color: white;
-    color: rgb(57, 47, 91);
+    color: var(--cor-primaria);
     cursor: pointer;
 }
+
+.hero-text-details{
+    font-weight: lighter;
+}
+
 
 .hero-text-button:hover {
     background-color: rgb(238, 235, 235);
 }
 
 /* CARD */
-
+article{
+    background-color: var(--cor-terciaria);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    
+}
 .propostas {
     height: auto;
     display: grid;
@@ -182,22 +186,22 @@ footer {
 
 .proposta-card:nth-child(odd) {
     background-color: var(--cor-primaria);
-    box-shadow: 1px 1px 2px 1px black;
+    box-shadow: 1px 1px 2px  rgb(82, 78, 78);
     color: rgb(255, 255, 255);
-    text-shadow: 1px 1px 4px black;
     transition: background 0.5s;
 }
 
 .proposta-card:nth-child(even) {
-    box-shadow: 1px 1px 2px 1px black;
+    background-color: var(--cor-secundaria);
+    box-shadow: 1px 1px 2px rgb(82, 78, 78);
     color: #000000;
-    text-shadow: 0.3px 0.3px 0.001px black;
     transition: background 0.5s;
 
 }
 
+
 .proposta-card:nth-child(even):hover {
-    box-shadow: 1px 1px 2px 1px black;
+    box-shadow: 1px 1px 2px black;
     background-color: #e5e5e5;
 }
 
@@ -247,34 +251,16 @@ footer {
 
 /* DADOS */
 
-@media (max-width: 600px) {
-    * {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
-    }
-    
-    html, body{
-        width: 100vw;
-        height: 100vh;
-    }
 
-    header {
-        width: 100%;
-    }
 
-    .header-logo {
-        position: fixed;
-        top: 0;
-        background: #000;
-    }
+/* FOOTER*/
 
-    .hero{
-        width: 100%;
-    }
-    .hero-image{
-        object-fit: cover;
-
-    }
+footer {
+    border-top: 1px solid black;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    padding-block: 100px;
 }
