--- a/frontend/css/salas-instituicao.css
+++ b/frontend/css/salas-instituicao.css
@@ -9,11 +9,20 @@
     grid-row-gap: 1em;
 }
 
+.salas-cards-uni:hover{
+    background-color: var(--cor-primaria);
+    opacity: 90%;
+}
+
 .salas-cards-uni{
     background-color: var(--cor-primaria);
     width: 300px;
     height: 200px;
     display: grid;
+    list-style: none;
+    text-decoration: none;
+
+
     grid-template-rows: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
@@ -22,3 +31,11 @@
 .salas-cards-uni p{
     font-size: 20px;
 }
+
+.turmastext{
+    margin-left: 20px;
+}
+
+.tools-painel-sala{
+    display: flex;
+align-items: center;}
